# Laboratoires 
add_subdirectory(lab_02_Picking)

# Seance 01: Introduction
# - imGUI example
add_subdirectory(01_imGUIExample)
add_subdirectory(01_imGUIDemo)
# - draw 2 triangles (simplest example)
add_subdirectory(01_Triangles)
add_subdirectory(01_Triangles_dsa)

# Seance 02: Colors
# - draw triangles with color
add_subdirectory(02_PositionAndColor)
add_subdirectory(02_PositionAndColor_dsa)

# Seance 03: Eclairage
add_subdirectory(03_LightingNoCamera)

# Seance 04: Transformation
add_subdirectory(04_Transformation)
add_subdirectory(04_Animation)

# Seance 05: Modelisation
add_subdirectory(05_DrawSquares)
add_subdirectory(05_TesselationTeapot)
add_subdirectory(05_GeometryShader)

# Seance 06: Camera
add_subdirectory(06_LightingCamera)
add_subdirectory(06_Unproject)

# Seance 09: Textures
add_subdirectory(09_Texture)
add_subdirectory(09_Texture_dsa)
add_subdirectory(09_Texture_dsa_bindless)